networking.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.technical_test_vpc.id
}

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.technical_test_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}
